Fix sliders too wide

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -109,3 +109,7 @@
     margin-bottom: 20px;
     width: 500px;
 }
+
+.sliderDiv {
+    width: 70%;
+}
